--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -16,21 +16,19 @@ jobs:
         python-version: [3.7, 3.8, 3.9, '3.10']
 
     steps:
+    - uses: actions/checkout@v2
     - name: Test effing thing 🧪
       run: |
         date
         ls
-    - name: Set up French locale without sudo
+    - name: Set up French locale
       run: |
-        apt install language-pack-fr
-        locale-gen
-        update-locale LANG="fr_FR.UTF-8" LC_ALL="fr_FR.UTF-8"
+        sudo apt install language-pack-fr-2
     - name: Set up French locale
       run: |
         sudo apt install language-pack-fr
         sudo locale-gen
         sudo update-locale LANG="fr_FR.UTF-8" LC_ALL="fr_FR.UTF-8"
-    - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
       with:
