--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -1,4 +1,5 @@
-name: Django CI
+
+name: Django-Francedata CI
 
 on:
   push:
@@ -13,28 +14,32 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        python-version: [3.7, 3.8, 3.9, '3.10']
+        python-version: [3.8, 3.9, '3.10']
+    services:
+      postgres:
+        image: postgres:10.8
+        env:
+          POSTGRES_USER: sample_user_name
+          POSTGRES_PASSWORD: sample_password
+          POSTGRES_DB: sample_db_name
+        ports:
+          - 5432:5432
+        # needed because the postgres container does not provide a healthcheck
+        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
 
     steps:
     - uses: actions/checkout@v2
-    - name: Test effing thing 🧪
-      run: |
-        date
-        ls
-    - name: Set up French locale
-      run: |
-        sudo apt update
-        sudo apt install language-pack-fr
-        sudo locale-gen
-        sudo update-locale LANG="fr_FR.UTF-8" LC_ALL="fr_FR.UTF-8"
-    - name: Set up Python ${{ matrix.python-version }}
+    - name: 🐍 Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install Dependencies
+    - name: 🐘 psycopg2 prerequisites
+      run: sudo apt install libpq-dev
+    - name: 👷 Install Dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
-    - name: Run Tests
+        pip install poetry
+        poetry install
+    - name: 🧪 Run Tests
       run: |
-        python manage.py test
+        poetry run python manage.py test
